@startuml

title __ACTIVITIES's Class Diagram__\n

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class AddListActivity {
          # onCreate()
      }
    }
  }
  

  package android.support.v4 {
    class HostCallbacks {
        + HostCallbacks()
        + onDump()
        + onShouldSaveFragmentState()
        + onGetLayoutInflater()
        + onGetHost()
        + onSupportInvalidateOptionsMenu()
        + onStartActivityFromFragment()
        + onStartActivityFromFragment()
        + onStartIntentSenderFromFragment()
        + onRequestPermissionsFromFragment()
        + onShouldShowRequestPermissionRationale()
        + onHasWindowAnimations()
        + onGetWindowAnimations()
        + onAttachFragment()
        + onFindViewById()
        + onHasView()
    }
  }
  

  package android.support.v4 {
    class NonConfigurationInstances {
        ~ custom : Object
        ~ viewModelStore : ViewModelStore
        ~ fragments : FragmentManagerNonConfig
        ~ NonConfigurationInstances()
    }
  }
  

  package android.support.v4 {
    class ExtraData {
        + ExtraData()
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class FavoriteActivity {
          # onCreate()
      }
    }
  }
  

  package android.support.v4 {
    class HostCallbacks {
        + HostCallbacks()
        + onDump()
        + onShouldSaveFragmentState()
        + onGetLayoutInflater()
        + onGetHost()
        + onSupportInvalidateOptionsMenu()
        + onStartActivityFromFragment()
        + onStartActivityFromFragment()
        + onStartIntentSenderFromFragment()
        + onRequestPermissionsFromFragment()
        + onShouldShowRequestPermissionRationale()
        + onHasWindowAnimations()
        + onGetWindowAnimations()
        + onAttachFragment()
        + onFindViewById()
        + onHasView()
    }
  }
  

  package android.support.v4 {
    class NonConfigurationInstances {
        ~ custom : Object
        ~ viewModelStore : ViewModelStore
        ~ fragments : FragmentManagerNonConfig
        ~ NonConfigurationInstances()
    }
  }
  

  package android.support.v4 {
    class ExtraData {
        + ExtraData()
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class HomeActivity {
          # onCreate()
      }
    }
  }
  

  package android.support.v4 {
    class HostCallbacks {
        + HostCallbacks()
        + onDump()
        + onShouldSaveFragmentState()
        + onGetLayoutInflater()
        + onGetHost()
        + onSupportInvalidateOptionsMenu()
        + onStartActivityFromFragment()
        + onStartActivityFromFragment()
        + onStartIntentSenderFromFragment()
        + onRequestPermissionsFromFragment()
        + onShouldShowRequestPermissionRationale()
        + onHasWindowAnimations()
        + onGetWindowAnimations()
        + onAttachFragment()
        + onFindViewById()
        + onHasView()
    }
  }
  

  package android.support.v4 {
    class NonConfigurationInstances {
        ~ custom : Object
        ~ viewModelStore : ViewModelStore
        ~ fragments : FragmentManagerNonConfig
        ~ NonConfigurationInstances()
    }
  }
  

  package android.support.v4 {
    class ExtraData {
        + ExtraData()
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class MainActivity {
          {static} - TAG : String
          - mNavigation : BottomNavigationView
          - mBdd : FirebaseFirestore
          - mOnNavigationItemSelectedListener : OnNavigationItemSelectedListener
          # onResume()
          # onCreate()
          + showFragment()
          - configureAndShowDetailFragment()
      }
    }
  }
  

  package android.support.v4 {
    class HostCallbacks {
        + HostCallbacks()
        + onDump()
        + onShouldSaveFragmentState()
        + onGetLayoutInflater()
        + onGetHost()
        + onSupportInvalidateOptionsMenu()
        + onStartActivityFromFragment()
        + onStartActivityFromFragment()
        + onStartIntentSenderFromFragment()
        + onRequestPermissionsFromFragment()
        + onShouldShowRequestPermissionRationale()
        + onHasWindowAnimations()
        + onGetWindowAnimations()
        + onAttachFragment()
        + onFindViewById()
        + onHasView()
    }
  }
  

  package android.support.v4 {
    class NonConfigurationInstances {
        ~ custom : Object
        ~ viewModelStore : ViewModelStore
        ~ fragments : FragmentManagerNonConfig
        ~ NonConfigurationInstances()
    }
  }
  

  package android.support.v4 {
    class ExtraData {
        + ExtraData()
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class MyListActivity {
          # onCreate()
      }
    }
  }
  

  package android.support.v4 {
    class HostCallbacks {
        + HostCallbacks()
        + onDump()
        + onShouldSaveFragmentState()
        + onGetLayoutInflater()
        + onGetHost()
        + onSupportInvalidateOptionsMenu()
        + onStartActivityFromFragment()
        + onStartActivityFromFragment()
        + onStartIntentSenderFromFragment()
        + onRequestPermissionsFromFragment()
        + onShouldShowRequestPermissionRationale()
        + onHasWindowAnimations()
        + onGetWindowAnimations()
        + onAttachFragment()
        + onFindViewById()
        + onHasView()
    }
  }
  

  package android.support.v4 {
    class NonConfigurationInstances {
        ~ custom : Object
        ~ viewModelStore : ViewModelStore
        ~ fragments : FragmentManagerNonConfig
        ~ NonConfigurationInstances()
    }
  }
  

  package android.support.v4 {
    class ExtraData {
        + ExtraData()
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class MyListsActivity {
          # onCreate()
      }
    }
  }
  

  package android.support.v4 {
    class HostCallbacks {
        + HostCallbacks()
        + onDump()
        + onShouldSaveFragmentState()
        + onGetLayoutInflater()
        + onGetHost()
        + onSupportInvalidateOptionsMenu()
        + onStartActivityFromFragment()
        + onStartActivityFromFragment()
        + onStartIntentSenderFromFragment()
        + onRequestPermissionsFromFragment()
        + onShouldShowRequestPermissionRationale()
        + onHasWindowAnimations()
        + onGetWindowAnimations()
        + onAttachFragment()
        + onFindViewById()
        + onHasView()
    }
  }
  

  package android.support.v4 {
    class NonConfigurationInstances {
        ~ custom : Object
        ~ viewModelStore : ViewModelStore
        ~ fragments : FragmentManagerNonConfig
        ~ NonConfigurationInstances()
    }
  }
  

  package android.support.v4 {
    class ExtraData {
        + ExtraData()
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class MyWordsActivity {
          # onCreate()
      }
    }
  }
  

  package android.support.v4 {
    class HostCallbacks {
        + HostCallbacks()
        + onDump()
        + onShouldSaveFragmentState()
        + onGetLayoutInflater()
        + onGetHost()
        + onSupportInvalidateOptionsMenu()
        + onStartActivityFromFragment()
        + onStartActivityFromFragment()
        + onStartIntentSenderFromFragment()
        + onRequestPermissionsFromFragment()
        + onShouldShowRequestPermissionRationale()
        + onHasWindowAnimations()
        + onGetWindowAnimations()
        + onAttachFragment()
        + onFindViewById()
        + onHasView()
    }
  }
  

  package android.support.v4 {
    class NonConfigurationInstances {
        ~ custom : Object
        ~ viewModelStore : ViewModelStore
        ~ fragments : FragmentManagerNonConfig
        ~ NonConfigurationInstances()
    }
  }
  

  package android.support.v4 {
    class ExtraData {
        + ExtraData()
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class ViewHolderExerciceList {
          - mtextViewExerciceLabel : TextView
          - mtextViewExerciceGoal : TextView
          - mtextViewExerciceNbOfWords : TextView
          - mtextViewExerciceCreadate : TextView
          ~ mIconFavorite : ImageButton
          - callbackWeakRef : WeakReference<FavoriteIconListener>
          + updateWithExercice()
          + onClick()
          + ViewHolderExerciceList()
          + bind()
          - convertDate()
      }
    }
  }
  

  package com.utilisateur.orthomem {
    package com.utilisateur.orthomem.controllers.activities {
      class ViewHolderWordList {
          - mtextViewWordId : TextView
          - mtextViewWordLabel : TextView
          ~ mCheckboxWord : CheckBox
          - callbackWeakRef : WeakReference<CheckBoxListener>
          + updateWithWord()
          + onClick()
          + ViewHolderWordList()
          + bind()
      }
    }
  }
  

  AddListActivity -up-|> FragmentActivity
  AddListActivity +-down- HostCallbacks
  AddListActivity +-down- NonConfigurationInstances
  AddListActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback
  FavoriteActivity -up-|> FragmentActivity
  FavoriteActivity +-down- HostCallbacks
  FavoriteActivity +-down- NonConfigurationInstances
  FavoriteActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback
  HomeActivity -up-|> FragmentActivity
  HomeActivity +-down- HostCallbacks
  HomeActivity +-down- NonConfigurationInstances
  HomeActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- MyListFragment : myListFragment
  MainActivity +-down- HostCallbacks
  MainActivity +-down- NonConfigurationInstances
  MainActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback
  MyListActivity -up-|> FragmentActivity
  MyListActivity +-down- HostCallbacks
  MyListActivity +-down- NonConfigurationInstances
  MyListActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback
  MyListsActivity -up-|> FragmentActivity
  MyListsActivity +-down- HostCallbacks
  MyListsActivity +-down- NonConfigurationInstances
  MyListsActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback
  MyWordsActivity -up-|> FragmentActivity
  MyWordsActivity +-down- HostCallbacks
  MyWordsActivity +-down- NonConfigurationInstances
  MyWordsActivity +-down- ExtraData
  HostCallbacks -up-|> FragmentHostCallback
  ViewHolderExerciceList -up-|> OnClickListener
  ViewHolderExerciceList -up-|> ViewHolder
  ViewHolderWordList -up-|> OnClickListener
  ViewHolderWordList -up-|> ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
